k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    component: backend
  name: backend
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  selector:
    matchLabels:
      component: backend
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        component: backend
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "9150"
        prometheus.io/path: /actuator/prometheus
    spec:
      containers:
      - command:
        - java
        - -jar
        - /home/tilos/backend.jar
        - --spring.config.location=file:/etc/tilos/tilos.properties
        image: quay.io/tilosradio/backend@sha256:819b0fe5f1942715beee86019f0b335196d1dc091355182be9a12a84eaa2b1ce
#        image: quay.io/tilosradio/backend@sha256:4521085da3eb91c990696056fb53688a43b3cb61b6191ba8667afe094b01acb2
#        image: quay.io/tilosradio/backend@sha256:f6acc2b666f624f2910b2041d125a3b47713c89be8cd3b1712346649ae5fd82f
#        image: quay.io/tilosradio/backend@sha256:7eaa86c6ea43814589c0f9d5efd46c04df45a8cb18a3542bd2d121be543d167f
        imagePullPolicy: IfNotPresent
        name: backend
        ports:
        - containerPort: 9150
          protocol: TCP
        resources: {}
        volumeMounts:
        - mountPath: /etc/tilos
          name: config
        - mountPath: /home/tilos/upload
          name: upload
      restartPolicy: Always
      volumes:
      - configMap:
          defaultMode: 420
          name: tilos
        name: config
      - name: upload
        hostPath:
          path: /home/tilos/upload
          type: Directory
