k8s/episode-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: episode
spec:
  ports:
  - nodePort: 32203
    port: 9150
    protocol: TCP
    targetPort: 9150
  selector:
    component: episode
  type: NodePort
