k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
spec:
  ports:
  - nodePort: 32210
    port: 9150
    protocol: TCP
    targetPort: 9150
  selector:
    component: backend
  type: NodePort
